infra/k8s/generator-service.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: generator-service
  namespace: generator-platform
spec:
  replicas: 1
  selector:
    matchLabels:
      app: generator-service
  template:
    metadata:
      labels:
        app: generator-service
    spec:
      containers:
        - name: generator-service
          image: generator-platform/generator-service:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8084
---

apiVersion: v1
kind: Service
metadata:
  name: generator-service
  namespace: generator-platform
spec:
  selector:
    app: generator-service
  ports:
    - protocol: TCP
      port: 8084
      targetPort: 8084
