infra/k8s/user-service.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-service
  namespace: generator-platform
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user-service
  template:
    metadata:
      labels:
        app: user-service
    spec:
      containers:
        - name: user-service
          image: generator-platform/user-service:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8081
---

apiVersion: v1
kind: Service
metadata:
  name: user-service
  namespace: generator-platform
spec:
  selector:
    app: user-service
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 8081
