infra/k8s/web-admin.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-admin
  namespace: generator-platform
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web-admin
  template:
    metadata:
      labels:
        app: web-admin
    spec:
      containers:
        - name: web-admin
          image: generator-platform/web-admin:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 3000
---

apiVersion: v1
kind: Service
metadata:
  name: web-admin
  namespace: generator-platform
spec:
  selector:
    app: web-admin
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
  type: LoadBalancer
